tests/baselines/reference/declFileWithClassNameConflictingWithClassReferredByExtendsClause.errors.txt
declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts(1,18): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts(1,20): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declFileWithClassNameConflictingWithClassReferredByExtendsClause.ts (3 errors) ====
    declare module A.B.Base {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                     ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                       ~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class W {
            id: number;
        }
    }
    namespace X.Y.base {
    
        export class W extends A.B.Base.W {
            name: string;
        }
    }
    
    namespace X.Y.base.Z {
    
        export class W<TValue> extends X.Y.base.W {
            value: boolean;
        }
    }
    